[gd_scene load_steps=2 format=3 uid="uid://chbqc4222yjnc"]

[ext_resource type="Script" uid="uid://b1pq4fylcflxu" path="res://scripts/pause_menu.gd" id="1_n87rw"]

[node name="Pause Menu" type="Node"]
script = ExtResource("1_n87rw")

[node name="CenterContainer" type="CenterContainer" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -64.0
offset_top = -64.0
offset_right = 64.0
offset_bottom = 64.0
grow_horizontal = 2
grow_vertical = 2

[node name="Panel" type="Panel" parent="CenterContainer"]
custom_minimum_size = Vector2(144, 120)
layout_mode = 2

[node name="CenterContainer2" type="CenterContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer2"]
layout_mode = 2

[node name="Continue" type="Button" parent="CenterContainer2/VBoxContainer"]
custom_minimum_size = Vector2(128, 0)
layout_mode = 2
text = "Continue"

[node name="Options" type="Button" parent="CenterContainer2/VBoxContainer"]
custom_minimum_size = Vector2(128, 0)
layout_mode = 2
text = "Options"

[node name="Quit" type="Button" parent="CenterContainer2/VBoxContainer"]
custom_minimum_size = Vector2(128, 0)
layout_mode = 2
text = "Quit"

[connection signal="button_down" from="CenterContainer2/VBoxContainer/Continue" to="." method="on_continue"]
[connection signal="button_down" from="CenterContainer2/VBoxContainer/Options" to="." method="on_options"]
[connection signal="button_up" from="CenterContainer2/VBoxContainer/Quit" to="." method="on_quit"]
